compiler/test_files/typing/bad/testfile-arith-2.psc
class S {
    i32 a;
};
i32 main()
{
    S p;
    1-p; 
}
